--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -7,4 +7,9 @@
 <meta name="msapplication-TileColor" content="#224679">
 <meta name="msapplication-config" content="/assets/misc/browserconfig.xml?v={{ site.misc.favicon-version }}">
 <meta name="theme-color" content="#ffffff">
-<script async src="https://ahm-ackee.netlify.app/tracker.js" data-ackee-server="https://ahm-ackee.netlify.app" data-ackee-domain-id="fe30c6bd-fb45-4d64-97c3-8843886de98b"></script>
+<script
+	async src="https://ahm-ackee.netlify.app/tracker.js"
+	data-ackee-server="https://ahm-ackee.netlify.app"
+	data-ackee-domain-id="fe30c6bd-fb45-4d64-97c3-8843886de98b"
+	data-ackee-opts="{&quot;detailed&quot;: true}"
+></script>
