Position consent dialog
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -7,3 +7,10 @@
 <meta name="msapplication-TileColor" content="#224679">
 <meta name="msapplication-config" content="/assets/misc/browserconfig.xml?v={{ site.misc.favicon-version }}">
 <meta name="theme-color" content="#ffffff">
+<style>
+#consent-axkeg5u7 {
+	left: calc((100vw - 375px)/2) !important;
+	position: sticky !important;
+	text-align: center !important;
+}
+</style>
