--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -13,4 +13,9 @@
 	position: sticky !important;
 	text-align: center !important;
 }
+@media only screen and (max-width:768px) {
+	div#consent-axkeg5u7 {
+		border-radius: 0!important;
+	}
+}
 </style>
