--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,64 +1,4 @@
-<script defer>
-let opts = {
-	text: 'I collect anonymized data for statistics, please accept it so that I get a cool stat.',
-	moreInformationLabel: 'More Info.'
-}
-AckeeTrackerOptIn.consent('https://ahm-ackee.netlify.app',
-						  'fe30c6bd-fb45-4d64-97c3-8843886de98b',
-						  opts);
-</script>
-<script>
-if ('serviceWorker' in navigator) {
-    /**
-     * Define if <link rel='next|prev|prefetch'> should
-     * be preloaded when accessing this page
-     */
-    const PREFETCH = true;
-    /**
-     * Define which link-rel's should be preloaded if enabled.
-     */
-    const PREFETCH_LINK_RELS = ['index', 'next', 'prev', 'prefetch'];
-    /**
-     * prefetchCache
-     */
-    function prefetchCache() {
-        if (navigator.serviceWorker.controller) {
-            let links = document.querySelectorAll(
-                PREFETCH_LINK_RELS.map((rel) => {
-                    return 'link[rel=' + rel + ']';
-                }).join(',')
-            );
-            if (links.length > 0) {
-                Array.from(links)
-                    .map((link) => {
-                        let href = link.getAttribute('href');
-                        navigator.serviceWorker.controller.postMessage({
-                            action: 'cache',
-                            url: href,
-                        });
-                    });
-            }
-        }
-    }
-    /**
-     * Register Service Worker
-     */
-    {{- $swTemplate := resources.Get "sw.js" -}}
-    {{- $serviceWorker := $swTemplate | resources.ExecuteAsTemplate "sw.js" . | minify -}}
-    navigator.serviceWorker
-        .register('{{ $serviceWorker.RelPermalink }}', { scope: '/'})
-        .then(() => {
-            console.log('Service Worker Registered');
-        });
-    /**
-     * Wait if ServiceWorker is ready
-     */
-    navigator.serviceWorker
-        .ready
-        .then(() => {
-            if (PREFETCH) {
-                prefetchCache();
-            }
-        });
-}
-</script>
+{{- if hugo.IsProduction | or (eq .Site.Params.env "production") }}
+{{- template "partials/templates/tracker-init.html" . }}
+{{- template "partials/templates/sw.html" . }}
+{{- end -}}
