--- a/layouts/shortcodes/svg.html
+++ b/layouts/shortcodes/svg.html
@@ -3,9 +3,16 @@
 {{- $alt := printf "alt=%q" $alt | safeHTMLAttr -}}
 {{- if hasPrefix $svg "https://" -}}
 {{- $name := printf "assets/image/%s.svg" (md5 $svg) -}}
-{{- $svg := resources.GetRemote $svg -}}
-{{- $svg := slice $svg | resources.Concat $name | minify -}}
+
+{{- with resources.GetRemote $svg -}}
+{{- with .Err -}}
+{{- warnf "%s" . -}}
+{{- else -}}
+{{- $svg := slice . | resources.Concat $name | minify -}}
 <img src="{{ $svg.RelPermalink }}" {{- $alt -}} />
+{{- end -}}
+{{- end -}}
+
 {{- else -}}
 {{- $svg := resources.Get $svg -}}
 <img src="{{ $svg.RelPermalink }}" {{- $alt -}} />
