Add proper licensing info
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,3 +1,4 @@
+{{- template "partials/templates/footer.html" . }}
 {{- if hugo.IsProduction | or (eq .Site.Params.env "production") }}
 {{- template "partials/templates/tracker-init.html" . }}
 {{- template "partials/templates/sw.html" . }}
