--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,5 +1,6 @@
-{{- partialCached "partials/footer/footer.html" . }}
 {{- if hugo.IsProduction | or (eq .Site.Params.env "production") }}
 {{- partialCached "partials/footer/tracker-init.html" . }}
 {{- partialCached "partials/footer/sw.html" . }}
+{{- partial "partials/footer/photoswipe.html" . }}
 {{- end -}}
+{{- partialCached "partials/footer/footer.html" . }}
