graphviz: Add shortcode for diagrams using viz
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -4,5 +4,6 @@
 {{- partialCached "partials/head/tracker.html" . }}
 {{- partial "partials/head/photoswipe.html" . }}
 {{- partial "partials/head/highlight.html" . }}
+{{- partial "partials/head/graphviz.html" . }}
 {{- end -}}
 {{/* printf "%v" (.HasShortcode "highlight") */}}
