highlight: Use relevant filename for css
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/layouts/partials/head/highlight.html
+++ b/layouts/partials/head/highlight.html
@@ -1,5 +1,5 @@
 {{- if .HasShortcode "highlight" -}}
-{{- $hlcss := (slice (resources.Get "css/style.css")) | resources.Concat "assets/css/highlight.css" | minify -}}
+{{- $hlcss := (slice (resources.Get "css/highlight.css")) | resources.Concat "assets/css/highlight.css" | minify -}}
 {{- if not .Site.Params.assets.disableFingerprinting -}}
 {{- $hlcss := $hlcss | fingerprint -}}
 <link rel="stylesheet" href="{{ $hlcss.RelPermalink }}" integrity="{{ $hlcss.Data.Integrity }}" />
