comments,theme: Use giscus/giscus, disable theme toggle
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,7 +1,14 @@
-<script src="https://utteranc.es/client.js"
-repo="ahmubashshir/ahmubashshir.github.io"
-issue-term="pathname"
-theme="preferred-color-scheme"
-crossorigin="anonymous"
-async>
+<script src="https://giscus.app/client.js"
+        data-repo="ahmubashshir/ahmubashshir.github.io"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkzMDA1MTQxMTQ="
+        data-category="Comments"
+        data-category-id="DIC_kwDOEel7Qs4CN8BQ"
+        data-mapping="og:title"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="transparent_dark"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
 </script>
