--- a/layouts/partials/head/tracker.html
+++ b/layouts/partials/head/tracker.html
@@ -12,6 +12,7 @@
 <style>
   #consent-axkeg5u7 {
     left: calc((100vw - 375px)/2) !important;
+    position: -webkit-sticky !important;
     position: sticky !important;
     text-align: center !important;
   }
