--- a/layouts/partials/head/photoswipe.html
+++ b/layouts/partials/head/photoswipe.html
@@ -1,27 +1,32 @@
 {{- if .HasShortcode "gallery" -}}
-{{- $style := (slice (resources.Get "css/hugo-easy-gallery.css")) | resources.Concat "assets/css/gallery.css" | minify -}}
-{{- if not .Site.Params.assets.disableFingerprinting -}}
-  {{- $style := $style | fingerprint -}}
-  <link rel="stylesheet" href="{{ $style.RelPermalink }}" integrity="{{ $style.Data.Integrity }}" as="style"/>
-{{- else -}}
-  <link rel="stylesheet" href="{{ $style.RelPermalink }}" as="style">
+{{- partialCached "res.html" (dict
+    "resources" (slice
+      "npm/photoswipe/photoswipe.css"
+      "npm/photoswipe/default-skin/default-skin.css"
+      "css/hugo-easy-gallery.css"
+    ) "type" "style"
+    "target" "assets/css/photoswipe/style.css"
+  ) "assets/css/photoswipe/style.css"
+-}}
+
+{{- range (slice "default-skin.png" "default-skin.svg" "preloader.gif") -}}
+  {{- $res := resources.Get (printf "npm/photoswipe/default-skin/%s" .) | resources.Copy (printf "assets/css/photoswipe/%s" .) -}}
+  <link rel="photoswipe-resource" href="{{ $res.RelPermalink }}" as="image">
 {{- end -}}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.css" integrity="sha256-sCl5PUOGMLfFYctzDW3MtRib0ctyUvI9Qsmq2wXOeBY=" crossorigin="anonymous" as="style"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/default-skin/default-skin.min.css" integrity="sha256-BFeI1V+Vh1Rk37wswuOYn5lsTcaU96hGaI7OUVCLjPc=" crossorigin="anonymous" as="style"/>
-<!--
-*** jQuery must be loaded before photoswipe.js ***
-- If your template already loads jQuery in the header then you don't need to load it again here.
-- If your template already loads jQuery in the footer, then you could load photoswipe.js from the footer instead
--->
-<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-{{- $script := (slice (resources.Get "js/photoswipe.js")) | resources.Concat "assets/js/photoswipe.js" | minify -}}
-{{- if not .Site.Params.assets.disableFingerprinting -}}
-  {{- $script := $script | fingerprint -}}
-  <script src="{{ $script.RelPermalink }}" integrity="{{ $script.Data.Integrity }}"></script>
-{{- else -}}
-  <script src="{{ $script.RelPermalink }}"></script>
-{{- end -}}
-<!-- Photoswipe css/js libraries -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.js" integrity="sha256-UplRCs9v4KXVJvVY+p+RSo5Q4ilAUXh7kpjyIP5odyc=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe-ui-default.min.js" integrity="sha256-PWHOlUzc96pMc8ThwRIXPn8yH4NOLu42RQ0b9SpnpFk=" crossorigin="anonymous"></script>
+
+{{- partialCached "res.html" (dict
+  "resources" (slice "npm/jquery/jquery.slim.js")
+  "type" "script" "target" "assets/js/jquery.js"
+  ) "assets/js/jquery.js"
+-}}
+
+{{- partialCached "res.html" (dict
+  "resources" (slice
+      "npm/photoswipe/photoswipe.js"
+      "npm/photoswipe/photoswipe-ui-default.js"
+      "js/photoswipe.js"
+    ) "type" "script"
+    "target" "assets/js/photoswipe.js"
+  ) "assets/js/photoswipe.js"
+-}}
 {{- end -}}
