refactor: Fix ackee error
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/layouts/partials/footer/tracker-init.html
+++ b/layouts/partials/footer/tracker-init.html
@@ -3,19 +3,23 @@
 {{- if and (ne .endPoint "") (ne .siteID "") -}}
 <!-- ackee init -->
 <script defer>
-AckeeTrackerOptIn.consent('{{- .endPoint | relURL -}}',
-  '{{- .siteID | plainify -}}',
-  {{- with .dialog -}}
-  {
-    {{- with .text -}}text: '{{- . | safeHTML -}}',{{- end -}}
-    {{- with .btnAcceptLabel -}}acceptButtonLabel: '{{- . | safeHTML -}}',{{- end -}}
-    {{- with .btnRejectLabel -}}rejectButtonLabel: '{{- . | safeHTML -}}',{{- end -}}
-    {{- with .moreInfoLebel -}}moreInformationLabel: '{{- . | safeHTML -}}',{{- end -}}
-    {{- with .moreInfoURL -}}moreInformationLink: '{{- . | relURL -}}',{{- end -}}
-    {{- with .shadow -}}shadow: {{- . | jsonify -}},{{- end -}}
-    position: 'bottom-left'
-  });
-  {{- end -}}
+window.addEventListener('load', () => {
+  AckeeTrackerOptIn.consent('{{- .endPoint | relURL -}}',
+    '{{- .siteID | plainify -}}',
+    {{- with .dialog -}}
+    {
+      {{- with .text -}}text: '{{- . | safeHTML -}}',{{- end -}}
+      {{- with .btnAcceptLabel -}}acceptButtonLabel: '{{- . | safeHTML -}}',{{- end -}}
+      {{- with .btnRejectLabel -}}rejectButtonLabel: '{{- . | safeHTML -}}',{{- end -}}
+      {{- with .moreInfoLebel -}}moreInformationLabel: '{{- . | safeHTML -}}',{{- end -}}
+      {{- with .moreInfoURL -}}moreInformationLink: '{{- . | relURL -}}',{{- end -}}
+      {{- with .shadow -}}shadow: {{- . | jsonify -}},{{- end -}}
+      position: 'bottom-left'
+    }
+    {{- end -}}
+  );
+});
 </script>
 {{- end -}}
 {{- end -}}
+{{/* <!-- vim: ts=2:et: --> */}}
