--- a/layouts/partials/head/tracker.html
+++ b/layouts/partials/head/tracker.html
@@ -11,12 +11,12 @@
 {{- end }}
 <style>
   #consent-axkeg5u7 {
-    left: calc((100vw - 375px)/2) !important;
-    text-align: center !important;
+    text-align: center !important
   }
-  @media only screen and (max-width:768px) {
-    div#consent-axkeg5u7 {
-      border-radius: 0!important;
+
+  @media only screen and (min-width:768.001px) {
+    #consent-axkeg5u7 {
+      left: calc((100vw - 375px)/2) !important;
     }
   }
 </style>
