--- a/assets/css/highlight.css
+++ b/assets/css/highlight.css
@@ -1,7 +1,13 @@
 /* Background */
+.bg {
+	color: #f8f8f2;
+	background-color: #282a36;
+}
+
+/* PreWrapper */
 .chroma {
 	color: #f8f8f2;
-	background-color: #282a36
+	background-color: #282a36;
 }
 
 /* Other */
@@ -9,6 +15,16 @@
 
 /* Error */
 .chroma .err {}
+
+/* CodeLine */
+.chroma .cl {}
+
+/* LineLink */
+.chroma .lnlinks {
+	outline: none;
+	text-decoration: none;
+	color: inherit
+}
 
 /* LineTableTD */
 .chroma .lntd {
@@ -24,20 +40,18 @@
 	padding: 0;
 	margin: 0;
 	border: 0;
-	width: auto;
-	overflow: auto;
-	display: block;
 }
 
 /* LineHighlight */
 .chroma .hl {
-	display: block;
-	width: 100%;
 	background-color: #ffffcc
 }
 
 /* LineNumbersTable */
 .chroma .lnt {
+	white-space: pre;
+	-webkit-user-select: none;
+	user-select: none;
 	margin-right: 0.4em;
 	padding: 0 0.4em 0 0.4em;
 	color: #7f7f7f
@@ -45,9 +59,17 @@
 
 /* LineNumbers */
 .chroma .ln {
+	white-space: pre;
+	-webkit-user-select: none;
+	user-select: none;
 	margin-right: 0.4em;
 	padding: 0 0.4em 0 0.4em;
 	color: #7f7f7f
+}
+
+/* Line */
+.chroma .line {
+	display: flex;
 }
 
 /* Keyword */
